# anotaciones

./: .gitignore  .gitmodules  21-3.html  404.html  GEMINI.md  README.md  README.rst  TODO.rst  a-vueltas-con-suse.html  actualizando-postgres-en-debian-y-derivados.html  actualizar-mercurial-usando-ppa-en-ubuntu.html  agent-browser-navegacion-agentes.html  ampliar-disco-vm-aurora-unraid.html  anadiendo-lenguaje-procedural-a-base-de-datos-postgres-createlang.html  anadiendo-un-repositio-ppa-en-karmic.html  anadir-ppa-desde-la-consola-a-ubuntu-karmic.html  anotaciones-blog-de-pablo-caro.html  archives.html  asciinema-terminal-recorder.html  atajos-de-teclado-kitty.html  autorelad-en-plone.html  bootstrap-dropdown-enlaces-horizontal.html  boton_central_firefox.html  broot-una-forma-diferente-de-navegar-directorios.html  buscando-una-fuente-para-escribir-codigo.html  busqueda-hibrida-sqlite-vector-texto-rrf.html  busqueda-hibrida-sqlite-vector-texto.html  cambiar-de-lugar-un-virtualenv.html  cambiar-dpi-en-kde.html  cambiar-el-aspecto-de-kdm-kdm-theme-generator.html  cambiar-ipython-para-copiar-y-pegar-luego-como-doctest.html  cambiar-la-codificacion-de-un-fichero-de-texto.html  cambiar-mapa-de-teclado-en-linux.html  cambiar-pantalla-anunciadora-de-kde-ksplash-theme-generator.html  categories.html  cierra-google-code.html  colores-desde-web-developer-tools.html  comandos-utiles-en-la-consola-de-postgres-pgsql.html  como-hacer-un-svn-export-con-git.html  como-uso-git-worktrees.html  (+150 more)
.claude/: settings.local.json
category/: devops.html  documentacion.html  finanzas.html  (+18 more)
(+1895 files in other folders)
