[project]
name = "anotaciones"
version = "0.1.0"
description = "Blog de Pablo Caro usando Pelican"
requires-python = ">=3.10"
dependencies = [
    "pelican==4.9.1",
    "markdown==3.5.1",
    "typogrify==2.0.7",
    "pygments==2.17.2",
    "beautifulsoup4==4.12.2",
    "feedgenerator==2.1.0",
    "jinja2==3.1.2",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "docutils==0.20.1",
    "unidecode==1.3.7",
    "blinker==1.7.0",
    "rich==13.7.0",
    "invoke==2.2.0",
    "livereload==2.6.3",
    "ghp-import==2.1.0",
    "six==1.17.0",
    "pelican-search",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
]
